# MakeAFace

./: .gitignore  CMakeLists.txt  README.md
shaders/: _fire.glsl  _purple_square.glsl  make_a_face_compare.glsl  make_a_face_draw.glsl  make_a_face_fs.glsl  make_a_face_main.glsl  make_a_face_vs.glsl  texture_copy.glsl  texture_draw.glsl
source/: GLShader.cpp  GLShader.h  imgui_impl_glfw_gl3.cpp  main.cpp
